--- a/src/components/contratos/viewTableContratos.html
+++ b/src/components/contratos/viewTableContratos.html
@@ -5,9 +5,13 @@
         <th>ID</th>
         <th>Responsável</th>
         <th>Aluno(a)</th>
+        <th>Aluno Assoc.</th>
+        <th>Status</th>
         <th></th>
     </thead
         <tbody id='tbody'>
+            <td>...</td>
+            <td>...</td>
             <td>...</td>
             <td>...</td>
             <td>...</td>
