--- a/src/assets/css/sass/alunos/_view_table_alunos.scss
+++ b/src/assets/css/sass/alunos/_view_table_alunos.scss
@@ -1,5 +1,59 @@
+@use "../abstracts/" as *;
 #view_table_alunos
 {
+    .td_cursos{
+      
+        font-size: 13px;
+        justify-content: center;
+        align-items: center;
+        vertical-align: middle;
+       padding:0px 5px;
+       div{
+           display: flex;
+           width: 100%;
+        span{
+            min-height:100%;
+            flex-grow: 1;
+            text-align: center;
+            padding:5px;
+            background: #ddddddcc;
+            
+        }
+        span:nth-child(even){
+            margin-left:3px;
+            background: #cccccccc;
+
+        };
+
+        span[class *='Informática'] {
+            color: $primary-color;
+        }
+        span[class *='web'] {
+            color: #1111ff;
+        }
+        span[class *='Inglês'] {
+            color: rgb(207, 6, 117);
+        }
+        span[class *='Excel'] {
+            color: green;
+        }
+        span[class *='Banco'] {
+            color: rgb(173, 89, 58);
+        }
+        span[class *='Espanhol'] {
+            color: rgb(112, 21, 44);
+        }
+        span[class *='Adm'] {
+            color: rgb(21, 112, 85);
+        }
+        .re {
+            color: rgb(112, 46, 112);
+        }
+
+
+       }
+ 
+    }
     .td_controles{
      width: 240px;
         height:40px;
