--- a/src/components/alunos/formAddCurso.html
+++ b/src/components/alunos/formAddCurso.html
@@ -12,6 +12,8 @@
       <label for="nome">Aluno:</label>
       <input readonly type='text' id='aluno_ra'>
       <input readonly type='text' id='aluno_nome'>
+      <label for="nome">RG:</label>
+      <input readonly type='text' id='aluno_rg'>
     </div>
     <div id='div_contrato'>
       <label>Contrato</label>
@@ -22,7 +24,8 @@
     </fieldset>
     <fieldset id='contrato_info'>
       <div id='div_info_aluno_nome'>
-        <label>Referente ao Aluno:</label><input readonly id='info_aluno_nome'>
+        <label>Aluno:</label><input readonly id='info_aluno_nome'>
+        <label>RG:</label><input readonly id='info_aluno_rg'>
       </div>
     
     </fieldset>
