--- a/src/components/contratos/formAddContrato.html
+++ b/src/components/contratos/formAddContrato.html
@@ -65,7 +65,8 @@
         </div>
   
       </div>
-      <!--fieldset resp-->
+       <!-------------------------Fieldset ALUNO----------------------->
+    
       <div class='fieldset' id='fieldset_aluno'>
         <div class='div_input' id='div_aluno_parentesco'>
           <label id='label_parentesco'>Parentesco c/ o Responsável: </label> 
@@ -99,7 +100,7 @@
         <div class='div_input' id='div_aluno_bairro'><label>Bairro: </label> <input id="aluno_bairro" type="text" />
         </div>
         <div class='div_input' id='div_aluno_cep'><label>CEP: </label> <input id="aluno_cep" type="text" /></div>
-        <div class='div_input' id='div_aluno_rg'><label>RG: </label> <input id="aluno_rg" type="text" /></div>
+        <div class='div_input' id='div_aluno_rg'><label>RG: </label> <input required='true' id="aluno_rg" type="text" /></div>
         <div class='div_input' id='div_aluno_data_nasc'>
           <label>Data Nasc.: </label> 
           <input id="aluno_data_nasc" type="date" />
