--- a/src/assets/css/sass/alunos/_view_table_alunos.scss
+++ b/src/assets/css/sass/alunos/_view_table_alunos.scss
@@ -61,5 +61,11 @@
             button{
 
             }
+        .btn_delete_curso{
+            //color:rgb(116, 106, 106);
+        }
+        .btn_add_curso{
+          //  color:rgb(2, 92, 2);
+        }
     }
 }
