--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -349,7 +349,7 @@ template {
   display: none;
 }
 
-.btn, #fieldset_resp div #btn_marcar_resp_aluno, .btn-secondary, .btn-primary, .forms_fixed input[type=submit], #form_add_aluno input[type=submit], #aluno_content .btn_add_curso, .form_flex input[type=submit], .form_flex_absolute input[type=submit], .form_flex_static input[type=submit], #form_config_perm input[type=submit], #form_reauth_user input[type=submit], #form_add_user input[type=submit], .forms_controle_aula input[type=submit], #form_info_aluno input[type=submit], #form_add_curso input[type=submit], .btn-default-delete, #form_add_saida_avulsa fieldset .div_submit input[type=submit], #aluno_content .bg_info_delete_curso .btn_deletar_curso, .btn-default, form.forms_fluxo_caixa .div_submit input[type=submit], .sub_menu_fluxo_caixa ul li a, .nav_forms ul li a, #page_login #login_content #form_login input[type=submit], .forms_fixed .label_btn_checkbox, #form_add_aluno .label_btn_checkbox, #bg_div_id_contrato #label_id_automatico_contrato, #fieldset_curso #div_curso_combo .row_combo .div_input_combo #label_check_combo, #aluno_content .btn_add, menu.submenu_page ul li a {
+.btn, #fieldset_resp div #btn_marcar_resp_aluno, .btn-secondary, .btn-primary, .forms_fixed input[type=submit], #form_add_aluno input[type=submit], #aluno_content .btn_add_curso, .form_flex input[type=submit], .form_flex_absolute input[type=submit], .form_flex_static input[type=submit], #form_config_perm input[type=submit], #form_reauth_user input[type=submit], #form_add_user input[type=submit], .forms_controle_aula input[type=submit], #form_info_aluno input[type=submit], #form_delete_curso input[type=submit], #form_add_curso input[type=submit], .btn-default-delete, #form_add_saida_avulsa fieldset .div_submit input[type=submit], #aluno_content .bg_info_delete_curso .btn_deletar_curso, .btn-default, form.forms_fluxo_caixa .div_submit input[type=submit], .sub_menu_fluxo_caixa ul li a, .nav_forms ul li a, #page_login #login_content #form_login input[type=submit], .forms_fixed .label_btn_checkbox, #form_add_aluno .label_btn_checkbox, #bg_div_id_contrato #label_id_automatico_contrato, #fieldset_curso #div_curso_combo .row_combo .div_input_combo #label_check_combo, #aluno_content .btn_add, menu.submenu_page ul li a {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -359,7 +359,7 @@ template {
   border: 0px;
   cursor: pointer;
 }
-.btn svg, #fieldset_resp div #btn_marcar_resp_aluno svg, .btn-secondary svg, .btn-primary svg, .forms_fixed input[type=submit] svg, #form_add_aluno input[type=submit] svg, #aluno_content .btn_add_curso svg, .form_flex input[type=submit] svg, .form_flex_absolute input[type=submit] svg, .form_flex_static input[type=submit] svg, #form_config_perm input[type=submit] svg, #form_reauth_user input[type=submit] svg, #form_add_user input[type=submit] svg, .forms_controle_aula input[type=submit] svg, #form_info_aluno input[type=submit] svg, #form_add_curso input[type=submit] svg, .btn-default-delete svg, #form_add_saida_avulsa fieldset .div_submit input[type=submit] svg, #aluno_content .bg_info_delete_curso .btn_deletar_curso svg, .btn-default svg, form.forms_fluxo_caixa .div_submit input[type=submit] svg, .sub_menu_fluxo_caixa ul li a svg, .nav_forms ul li a svg, #page_login #login_content #form_login input[type=submit] svg, .forms_fixed .label_btn_checkbox svg, #form_add_aluno .label_btn_checkbox svg, #bg_div_id_contrato #label_id_automatico_contrato svg, #fieldset_curso #div_curso_combo .row_combo .div_input_combo #label_check_combo svg, #aluno_content .btn_add svg, menu.submenu_page ul li a svg {
+.btn svg, #fieldset_resp div #btn_marcar_resp_aluno svg, .btn-secondary svg, .btn-primary svg, .forms_fixed input[type=submit] svg, #form_add_aluno input[type=submit] svg, #aluno_content .btn_add_curso svg, .form_flex input[type=submit] svg, .form_flex_absolute input[type=submit] svg, .form_flex_static input[type=submit] svg, #form_config_perm input[type=submit] svg, #form_reauth_user input[type=submit] svg, #form_add_user input[type=submit] svg, .forms_controle_aula input[type=submit] svg, #form_info_aluno input[type=submit] svg, #form_delete_curso input[type=submit] svg, #form_add_curso input[type=submit] svg, .btn-default-delete svg, #form_add_saida_avulsa fieldset .div_submit input[type=submit] svg, #aluno_content .bg_info_delete_curso .btn_deletar_curso svg, .btn-default svg, form.forms_fluxo_caixa .div_submit input[type=submit] svg, .sub_menu_fluxo_caixa ul li a svg, .nav_forms ul li a svg, #page_login #login_content #form_login input[type=submit] svg, .forms_fixed .label_btn_checkbox svg, #form_add_aluno .label_btn_checkbox svg, #bg_div_id_contrato #label_id_automatico_contrato svg, #fieldset_curso #div_curso_combo .row_combo .div_input_combo #label_check_combo svg, #aluno_content .btn_add svg, menu.submenu_page ul li a svg {
   max-width: 100px;
   max-height: 100px;
   height: auto;
@@ -395,14 +395,14 @@ template {
   background: #fc4646;
 }
 
-.btn-primary, .forms_fixed input[type=submit], #form_add_aluno input[type=submit], #aluno_content .btn_add_curso, .form_flex input[type=submit], .form_flex_absolute input[type=submit], .form_flex_static input[type=submit], #form_config_perm input[type=submit], #form_reauth_user input[type=submit], #form_add_user input[type=submit], .forms_controle_aula input[type=submit], #form_info_aluno input[type=submit], #form_add_curso input[type=submit] {
+.btn-primary, .forms_fixed input[type=submit], #form_add_aluno input[type=submit], #aluno_content .btn_add_curso, .form_flex input[type=submit], .form_flex_absolute input[type=submit], .form_flex_static input[type=submit], #form_config_perm input[type=submit], #form_reauth_user input[type=submit], #form_add_user input[type=submit], .forms_controle_aula input[type=submit], #form_info_aluno input[type=submit], #form_delete_curso input[type=submit], #form_add_curso input[type=submit] {
   background: #245da7;
   color: #fafafa;
 }
-.btn-primary:hover, .forms_fixed input[type=submit]:hover, #form_add_aluno input[type=submit]:hover, #aluno_content .btn_add_curso:hover, .form_flex input[type=submit]:hover, .form_flex_absolute input[type=submit]:hover, .form_flex_static input[type=submit]:hover, #form_config_perm input[type=submit]:hover, #form_reauth_user input[type=submit]:hover, #form_add_user input[type=submit]:hover, .forms_controle_aula input[type=submit]:hover, #form_info_aluno input[type=submit]:hover, #form_add_curso input[type=submit]:hover {
+.btn-primary:hover, .forms_fixed input[type=submit]:hover, #form_add_aluno input[type=submit]:hover, #aluno_content .btn_add_curso:hover, .form_flex input[type=submit]:hover, .form_flex_absolute input[type=submit]:hover, .form_flex_static input[type=submit]:hover, #form_config_perm input[type=submit]:hover, #form_reauth_user input[type=submit]:hover, #form_add_user input[type=submit]:hover, .forms_controle_aula input[type=submit]:hover, #form_info_aluno input[type=submit]:hover, #form_delete_curso input[type=submit]:hover, #form_add_curso input[type=submit]:hover {
   background: #2969bc;
 }
-.btn-primary:active, .forms_fixed input[type=submit]:active, #form_add_aluno input[type=submit]:active, #aluno_content .btn_add_curso:active, .form_flex input[type=submit]:active, .form_flex_absolute input[type=submit]:active, .form_flex_static input[type=submit]:active, #form_config_perm input[type=submit]:active, #form_reauth_user input[type=submit]:active, #form_add_user input[type=submit]:active, .forms_controle_aula input[type=submit]:active, #form_info_aluno input[type=submit]:active, #form_add_curso input[type=submit]:active {
+.btn-primary:active, .forms_fixed input[type=submit]:active, #form_add_aluno input[type=submit]:active, #aluno_content .btn_add_curso:active, .form_flex input[type=submit]:active, .form_flex_absolute input[type=submit]:active, .form_flex_static input[type=submit]:active, #form_config_perm input[type=submit]:active, #form_reauth_user input[type=submit]:active, #form_add_user input[type=submit]:active, .forms_controle_aula input[type=submit]:active, #form_info_aluno input[type=submit]:active, #form_delete_curso input[type=submit]:active, #form_add_curso input[type=submit]:active {
   background: #1f5192;
   box-shadow: inset 0px 1px 3px #122e53;
 }
@@ -433,7 +433,7 @@ inputs, .input-primary {
   color: #444;
 }
 
-.forms, .form_flex_static, #form_info_aluno, .form_flex_absolute, #form_add_curso, .form_flex, #form_config_perm, #form_reauth_user, #form_add_user, .forms_controle_aula {
+.forms, .form_flex_static, #form_info_aluno, .form_flex_absolute, #form_delete_curso, #form_add_curso, .form_flex, #form_config_perm, #form_reauth_user, #form_add_user, .forms_controle_aula {
   border: 1px solid #999;
   position: fixed;
   right: 0;
@@ -442,22 +442,23 @@ inputs, .input-primary {
   z-index: 5;
   box-shadow: 0 1px 2px #666;
 }
-.forms .btn_close_form, .form_flex_static .btn_close_form, #form_info_aluno .btn_close_form, .form_flex_absolute .btn_close_form, #form_add_curso .btn_close_form, .form_flex .btn_close_form, #form_config_perm .btn_close_form, #form_reauth_user .btn_close_form, #form_add_user .btn_close_form, .forms_controle_aula .btn_close_form {
+.forms .btn_close_form, .form_flex_static .btn_close_form, #form_info_aluno .btn_close_form, .form_flex_absolute .btn_close_form, #form_delete_curso .btn_close_form, #form_add_curso .btn_close_form, .form_flex .btn_close_form, #form_config_perm .btn_close_form, #form_reauth_user .btn_close_form, #form_add_user .btn_close_form, .forms_controle_aula .btn_close_form {
   right: 0;
   top: 0;
   padding: 5px 10px;
   position: absolute;
   cursor: pointer;
 }
-.forms .btn_close_form:hover, .form_flex_static .btn_close_form:hover, #form_info_aluno .btn_close_form:hover, .form_flex_absolute .btn_close_form:hover, #form_add_curso .btn_close_form:hover, .form_flex .btn_close_form:hover, #form_config_perm .btn_close_form:hover, #form_reauth_user .btn_close_form:hover, #form_add_user .btn_close_form:hover, .forms_controle_aula .btn_close_form:hover {
+.forms .btn_close_form:hover, .form_flex_static .btn_close_form:hover, #form_info_aluno .btn_close_form:hover, .form_flex_absolute .btn_close_form:hover, #form_delete_curso .btn_close_form:hover, #form_add_curso .btn_close_form:hover, .form_flex .btn_close_form:hover, #form_config_perm .btn_close_form:hover, #form_reauth_user .btn_close_form:hover, #form_add_user .btn_close_form:hover, .forms_controle_aula .btn_close_form:hover {
   background: #dd4f4f;
   color: #fff;
 }
-.forms input:focus, .form_flex_static input:focus, #form_info_aluno input:focus, .form_flex_absolute input:focus, #form_add_curso input:focus, .form_flex input:focus, #form_config_perm input:focus, #form_reauth_user input:focus, #form_add_user input:focus, .forms_controle_aula input:focus,
+.forms input:focus, .form_flex_static input:focus, #form_info_aluno input:focus, .form_flex_absolute input:focus, #form_delete_curso input:focus, #form_add_curso input:focus, .form_flex input:focus, #form_config_perm input:focus, #form_reauth_user input:focus, #form_add_user input:focus, .forms_controle_aula input:focus,
 .forms textarea:focus,
 .form_flex_static textarea:focus,
 #form_info_aluno textarea:focus,
 .form_flex_absolute textarea:focus,
+#form_delete_curso textarea:focus,
 #form_add_curso textarea:focus,
 .form_flex textarea:focus,
 #form_config_perm textarea:focus,
@@ -468,6 +469,7 @@ inputs, .input-primary {
 .form_flex_static select:focus,
 #form_info_aluno select:focus,
 .form_flex_absolute select:focus,
+#form_delete_curso select:focus,
 #form_add_curso select:focus,
 .form_flex select:focus,
 #form_config_perm select:focus,
@@ -563,7 +565,7 @@ inputs, .input-primary {
   z-index: 5;
 }
 
-.form_flex_absolute, #form_add_curso {
+.form_flex_absolute, #form_delete_curso, #form_add_curso {
   display: flex;
   flex-wrap: wrap;
   border-radius: 3px;
@@ -576,20 +578,20 @@ inputs, .input-primary {
   transition: all 2s;
   z-index: 7;
 }
-.form_flex_absolute h3, #form_add_curso h3 {
+.form_flex_absolute h3, #form_delete_curso h3, #form_add_curso h3 {
   text-transform: uppercase;
   flex-basis: 100%;
   text-align: center;
   margin-bottom: 30px;
   margin-top: -5px;
 }
-.form_flex_absolute h3 svg, #form_add_curso h3 svg {
+.form_flex_absolute h3 svg, #form_delete_curso h3 svg, #form_add_curso h3 svg {
   margin-bottom: -5px;
   margin-right: 2px;
   height: 25px;
   width: auto;
 }
-.form_flex_absolute div, #form_add_curso div {
+.form_flex_absolute div, #form_delete_curso div, #form_add_curso div {
   display: flex;
   padding: 5px;
   flex-grow: 1;
@@ -599,15 +601,16 @@ inputs, .input-primary {
   margin-top: 5px;
   justify-content: center;
 }
-.form_flex_absolute div label, #form_add_curso div label {
+.form_flex_absolute div label, #form_delete_curso div label, #form_add_curso div label {
   display: flex;
   align-items: center;
   min-width: 85px;
   background: #f0f0f0;
   padding: 5px 10px;
 }
-.form_flex_absolute div input, #form_add_curso div input,
+.form_flex_absolute div input, #form_delete_curso div input, #form_add_curso div input,
 .form_flex_absolute div textarea,
+#form_delete_curso div textarea,
 #form_add_curso div textarea {
   width: auto;
   max-width: 500px;
@@ -619,14 +622,14 @@ inputs, .input-primary {
   padding: 5px;
   color: #444;
 }
-.form_flex_absolute select, #form_add_curso select {
+.form_flex_absolute select, #form_delete_curso select, #form_add_curso select {
   display: block;
   flex-grow: 1;
 }
-.form_flex_absolute .div_submit, #form_add_curso .div_submit {
+.form_flex_absolute .div_submit, #form_delete_curso .div_submit, #form_add_curso .div_submit {
   width: 100%;
 }
-.form_flex_absolute input[type=submit], #form_add_curso input[type=submit] {
+.form_flex_absolute input[type=submit], #form_delete_curso input[type=submit], #form_add_curso input[type=submit] {
   display: block;
   clear: both;
   max-width: 300px;
@@ -2264,6 +2267,33 @@ option[disabled] {
   border: 1px solid red;
 }
 
+#form_delete_curso {
+  border: 1px solid red;
+}
+#form_delete_curso fieldset {
+  min-width: 100%;
+  margin-bottom: 10px;
+}
+#form_delete_curso div {
+  overflow: hidden;
+  display: flex;
+  max-width: 100%;
+}
+#form_delete_curso div select {
+  min-width: 300px;
+  flex-grow: 1;
+}
+#form_delete_curso #aluno_ra {
+  max-width: 80px;
+  min-width: 50px;
+}
+#form_delete_curso #div_submit {
+  width: 100%;
+}
+#form_delete_curso #div_submit input {
+  background: #aa3f3f;
+}
+
 #form_info_aluno {
   background: #f0f0f0;
   padding: 0;
@@ -3085,14 +3115,16 @@ form.forms_fluxo_caixa .div_submit input[type=submit] {
   border-radius: 50%;
 }
 
-#block_screen {
-  width: 100%;
+.block_screen {
+  min-width: 100%;
   min-height: 100vh;
   position: absolute;
-  background-color: #11111140;
+  background-color: #00000080;
   z-index: 4;
   bottom: 0px;
-  top: 0px;
+  top: -5px;
+  left: 0px;
+  right: 0px;
   display: none;
 }
 
