--- a/src/assets/css/sass/style.scss
+++ b/src/assets/css/sass/style.scss
@@ -71,15 +71,14 @@
 }
 .block_screen{
   min-width:100%; 
-  min-height: 100vh;
+  min-height: 100%;
   position: absolute;
-  background-color: #00000080;
+  background-color: #33333370;
   z-index: 4;
   bottom:0px;
   top:-5px;
   left:0px; right:0px;
-  display:none;
-}
+} 
 
 .components{
   h1 {
@@ -185,7 +184,7 @@ grid-template-columns: 250px 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
   left: 0;
   right: 0;
   top:10%;
-  z-index: 5;
+  z-index: 6;
   display: flex;
   align-items: center;
   justify-content: center;
