--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -2112,6 +2112,10 @@ option[disabled] {
   margin-right: 5px;
 }
 
+#bg_contrato_content {
+  position: relative;
+}
+
 .forms_fixed, #form_add_aluno {
   box-shadow: 0 1px 3px #666;
   background: #f8f8f8;
@@ -3117,15 +3121,14 @@ form.forms_fluxo_caixa .div_submit input[type=submit] {
 
 .block_screen {
   min-width: 100%;
-  min-height: 100vh;
+  min-height: 100%;
   position: absolute;
-  background-color: #00000080;
+  background-color: #33333370;
   z-index: 4;
   bottom: 0px;
   top: -5px;
   left: 0px;
   right: 0px;
-  display: none;
 }
 
 .components h1 {
@@ -3225,7 +3228,7 @@ h1 {
   left: 0;
   right: 0;
   top: 10%;
-  z-index: 5;
+  z-index: 6;
   display: flex;
   align-items: center;
   justify-content: center;
