--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -2494,6 +2494,10 @@ option[disabled] {
   color: #fff !important;
 }
 
+#bg_view_table_alunos {
+  position: relative;
+}
+
 #view_table_alunos .td_cursos {
   font-size: 13px;
   justify-content: center;
