--- a/src/assets/css/sass/controle_aula/_index.scss
+++ b/src/assets/css/sass/controle_aula/_index.scss
@@ -1,5 +1,5 @@
 @use './controle_aula';
-@use './aluno_content';
+@use './controle_aula_content';
 @use './forms';
 @use './form_add_aula';
 @use './form_add_feedback_bimestral';
