--- a/src/components/controleAula/index.html
+++ b/src/components/controleAula/index.html
@@ -12,7 +12,7 @@
 
     </form>
 
-    <div id="aluno_content">
+    <div id="controle_aula_content">
 
 
     </div><!--aluno_content-->
@@ -21,3 +21,5 @@
   </div>
   <!--components-->
 </div>
+
+
