--- a/src/assets/css/sass/controle_aula/_controle_aula_content.scss
+++ b/src/assets/css/sass/controle_aula/_controle_aula_content.scss
@@ -34,7 +34,7 @@ nav.nav_cursos_aluno {
         }
     }
 }
-#aluno_content {
+#controle_aula_content {
  
     border:$border-set-decorative;
     overflow: hidden;
