Formulários em posição absoluta centralizados

--- a/src/assets/css/sass/controle_aula/_forms.scss
+++ b/src/assets/css/sass/controle_aula/_forms.scss
@@ -6,7 +6,7 @@ dialog{
   
   
   .forms_controle_aula{
-    @extend .form_flex;
+    @extend .form_flex_absolute;
     #aluno_nome, #curso_nome, #bimestre_nome{
       margin-top:10px;
       padding:$padding-light;
