--- a/src/assets/css/sass/users/_form_config_perm.scss
+++ b/src/assets/css/sass/users/_form_config_perm.scss
@@ -1,7 +1,7 @@
 
 @use "../abstracts" as *;
 #form_config_perm{
-    @extend .form_flex; 
+    @extend .form_flex_absolute;; 
 
     textarea{
         width:100%;
