--- a/src/assets/css/sass/abstracts/_forms.scss
+++ b/src/assets/css/sass/abstracts/_forms.scss
@@ -8,12 +8,10 @@ inputs {
 
 .forms {
     border: $border-set-default;
-    position: fixed;
     right: 0;
     left: 0;
     top: 25%;
     z-index: 5;
-
     box-shadow: 0 1px 2px #666;
     .btn_close_form {
         right: 0;
@@ -36,87 +34,14 @@ inputs {
     }
 }
 
-.form_flex {
-    @extend .forms;
-    display: flex;
-    flex-wrap: wrap;
-    border-radius: $border-radius;
-    border-color: $border-color-medium;
-    padding: $padding-large;
-    max-width: 600px;
-    margin: 20px auto;
-    height: auto;
-
-    background: #ffc;
-    transition: all 2s;
-    h3 {
-        text-transform: uppercase;
-        flex-basis: 100%;
-        text-align: center;
-        margin-bottom: 30px;
-        margin-top: -5px;
-        svg {
-            margin-bottom: -5px;
-            margin-right: 2px;
-            height: 25px;
-            width: auto;
-        }
-    }
-    div {
-        display: flex;
-        padding: $padding-extra-light;
-        flex-grow: 1;
-        max-width: 100%;
-        min-height: 45px;
-        padding: 5px 0;
-        margin-top: 5px;
-        justify-content: center;
-
-        label {
-            display: flex;
-            align-items: center;
-            min-width: 85px;
-            background: #f0f0f0;
-            padding: 5px 10px;
-        }
-
-        input,
-        textarea {
-            width: auto;
-            max-width: 500px;
-            min-width: 100px;
-            flex-shrink: 1;
-            flex-grow: 1;
-            display: block;
-            border: $border-set-default;
-            padding: $padding-extra-light;
-            color: $text-color;
-        }
-    }
-    select {
-        display: block;
-        flex-grow: 1;
-    }
-
-    .div_submit {
-        width: 100%;
-    }
-    input[type=submit] {
-        @extend .btn-primary;
-        display: block;
-        clear: both;
-        max-width: 300px;
-        min-width: 50%;
-        min-height: 45px;
-        margin: 40px auto auto;
-    }
-
-}
 
 .bg_form_block_screen {
     width: 100%;
     min-height: 100vh;
     position: fixed;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     background-color: #11111199;
     right: 0;
     left: 0;
@@ -124,16 +49,16 @@ inputs {
     z-index: 5;
 
 }
-
+//---------------------FORM ABSOLUTE--------------
 .form_flex_absolute {
     @extend .forms;
     display: flex;
+    position: relative;
     flex-wrap: wrap;
     border-radius: $border-radius;
     border-color: $border-color-medium;
     padding: $padding-large;
     max-width: 600px;
-    margin: 20px auto;
     height: auto;
     background: #fff;
     transition: all 2s;
@@ -201,6 +126,7 @@ inputs {
     }
 
 }
+//---------------------FORM STATIC--------------
 
 .form_flex_static {
     @extend .forms;
