--- a/src/assets/css/sass/users/_form_add_user.scss
+++ b/src/assets/css/sass/users/_form_add_user.scss
@@ -1,6 +1,6 @@
 
 @use "../abstracts" as *;
 #form_add_user{
-    @extend .form_flex;
+    @extend .form_flex_absolute;
     #user_privilege{width:50px;}
 }
