--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -3060,18 +3060,6 @@ form.forms_fluxo_caixa .div_submit input[type=submit] {
   border-radius: 50%;
 }
 
-.block_screen {
-  min-width: 100%;
-  min-height: 100%;
-  position: absolute;
-  background-color: #33333370;
-  z-index: 4;
-  bottom: 0px;
-  top: -5px;
-  left: 0px;
-  right: 0px;
-}
-
 .components h1 {
   color: #333;
   text-align: center;
@@ -3161,14 +3149,29 @@ h1 {
   color: #fff;
 }
 
+.block_screen {
+  width: 100%;
+  min-height: 100vh;
+  position: fixed;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #11111199;
+  right: 0;
+  left: 0;
+  top: 0;
+  z-index: 5;
+}
+
 .confirm_box {
   background: #fff;
-  position: absolute;
+  position: -webkit-sticky;
+  position: fixed;
   margin-left: auto;
   margin-right: auto;
   left: 0;
   right: 0;
-  top: 10%;
+  top: 30%;
   z-index: 6;
   display: flex;
   align-items: center;
@@ -3178,6 +3181,7 @@ h1 {
   width: 400px;
   height: auto;
   min-height: 80px;
+  max-height: 300px;
   padding: 20px;
   font-size: 18px;
   border-radius: 5px;
