--- a/src/assets/css/sass/controle_aula/_controle_aula_content.scss
+++ b/src/assets/css/sass/controle_aula/_controle_aula_content.scss
@@ -35,11 +35,11 @@ nav.nav_cursos_aluno {
     }
 }
 #controle_aula_content {
- 
+ background: #fff;
     border:$border-set-decorative;
     overflow: hidden;
     position: relative;
-    min-height: 500px;
+    min-height: 300px;
     opacity: 0;
     transition: all 1s;
     .btn_add_curso {
