--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1139,10 +1139,11 @@ nav.nav_cursos_aluno ul li .active {
 }
 
 #controle_aula_content {
+  background: #fff;
   border: 1px solid #666;
   overflow: hidden;
   position: relative;
-  min-height: 500px;
+  min-height: 300px;
   opacity: 0;
   transition: all 1s;
 }
