--- a/src/assets/css/sass/contratos/_view_table_contratos.scss
+++ b/src/assets/css/sass/contratos/_view_table_contratos.scss
@@ -1,3 +1,9 @@
 #bg_contrato_content{
     position: relative;
+
+    table{
+        .td_contrato_id, .td_aluno_assoc, .td_contrato_status{
+            text-align: center;
+        }
+    }
 } 
