--- a/src/components/controleAula/index.html
+++ b/src/components/controleAula/index.html
@@ -13,7 +13,7 @@
     </form>
 
     <div id="controle_aula_content">
-
+    <nav class='nav_cursos_aluno'></nav>
 
     </div><!--aluno_content-->
     <!--page_content-->
