Automaticamente deletar bimestres vazios adicionado

--- a/src/components/controleAula/formAddFeedbackBimestral.html
+++ b/src/components/controleAula/formAddFeedbackBimestral.html
@@ -37,7 +37,7 @@
          <option value='bimestre 8'>Bimestre 8</option>
     </select>
   </div>
-  <div id='div_observacao'><label>Observação:</label><textarea  required  id="observacao"></textarea></div>
+  <div id='div_observacao'><label>Observação:</label><textarea  id="observacao"></textarea></div>
   <input type="submit" value="Salvar" />
 </form>
 </div>
