--- a/src/assets/css/sass/alunos/_info_aluno.scss
+++ b/src/assets/css/sass/alunos/_info_aluno.scss
@@ -8,6 +8,9 @@
     border: 0;
     padding:20px;
     max-width: 1200px;
+input[readonly="true"]{
+    background: #ccc;
+}
 
     table,td, th{
         padding:5px;
