--- a/src/components/alunos/infoAluno.html
+++ b/src/components/alunos/infoAluno.html
@@ -5,9 +5,12 @@
       <div class='block_info' id='info_cursos'>
 
     </div>
- <form id='form_info_aluno'>
+ <form id='form_info_aluno' class='form_info'>
+
 <div class='fieldset' id='filedset_info_cadastro'>
+   
     <div class='div_input_info'>
+        <label>RA:</label><input readonly="true" id='aluno_ra' type='text'>
         <label>Aluno:</label><input readonly="true" id='aluno_nome' type='text'>
         <label>Genero:</label><input  readonly="true" id='aluno_genero' type='text'>
     </div>
@@ -20,6 +23,7 @@
         <input id='aluno_bairro' type='text'>
     </div>
     <div class='div_input_info'><label>CEP:</label><input id='aluno_cep' type='text'></div>
+    <div class='div_input_info'><label>Email:</label><input id='aluno_email' type='text'></div>
     <div class='div_input_info'><label>RG:</label><input readonly="true" id='aluno_rg' type='text'></div>
     <div class='div_input_info'><label>Data Nasc.:</label><input  id='aluno_data_nasc' type='text'></div>
     <div class='div_input_info'><label>Cel.:</label><input  id='aluno_cel' type='text'></div>
