--- a/src/components/alunos/infoAluno.html
+++ b/src/components/alunos/infoAluno.html
@@ -5,7 +5,7 @@
       <div class='block_info' id='info_cursos'>
 
     </div>
- <form id='form_info_aluno' class='form_info'>
+ <form id='form_info_aluno' >
 
 <div class='fieldset' id='filedset_info_cadastro'>
    
@@ -25,7 +25,7 @@
     <div class='div_input_info'><label>CEP:</label><input id='aluno_cep' type='text'></div>
     <div class='div_input_info'><label>Email:</label><input id='aluno_email' type='text'></div>
     <div class='div_input_info'><label>RG:</label><input readonly="true" id='aluno_rg' type='text'></div>
-    <div class='div_input_info'><label>Data Nasc.:</label><input  id='aluno_data_nasc' type='text'></div>
+    <div class='div_input_info'><label>Data Nasc.:</label><input  id='aluno_data_nasc' type='date'></div>
     <div class='div_input_info'><label>Cel.:</label><input  id='aluno_cel' type='text'></div>
     <div class='div_input_info'><label>Tel.:</label><input  id='aluno_tel' type='text'></div>
 </div><!--filedset-->
