--- a/src/assets/css/sass/alunos/_info_aluno.scss
+++ b/src/assets/css/sass/alunos/_info_aluno.scss
@@ -5,8 +5,8 @@
     background: #f0f0f0;
     padding: 0;
     box-shadow: none;
-    border: 0;
-    padding:20px;
+    border:1px solid $primary-color;
+    padding:20px 40px;
     max-width: 1200px;
 input[readonly="true"]{
     background: #ccc;
@@ -148,15 +148,17 @@ input[readonly="true"]{
         margin-top:20px;
         margin-bottom:20px;
         display: block;
-        border:1px solid #333;
         h4 {
             text-transform: uppercase;
             background:#cdc;
             width: calc(100% + 20px);
             text-align: center;
             padding: 20px;
-            margin: -10px;
+            margin-top: -50px;
+            margin-left:-50px; 
+            margin-right: -50px;
             margin-bottom:20px;
+            width: calc(100% + 100px)
         }
         fieldset {
 
